# scsir

scsir/: Cargo.toml
scsir/src/: data_wrapper.rs  lib.rs  scsi.rs
scsir/src/command/: ata.rs  background_control.rs  format_unit.rs  get_lba_status.rs  get_stream_status.rs  inquiry.rs  log_select.rs  log_sense.rs  mod.rs  mode_select.rs  mode_sense.rs  persistent_reserve_in.rs  persistent_reserve_out.rs  read.rs  read_buffer.rs  read_capacity.rs  read_defect_data.rs  reassign_blocks.rs  receive_diagnostic_results.rs  report_identifying_information.rs  report_luns.rs  report_supported_operation_codes.rs  report_supported_task_management_functions.rs  report_timestamp.rs  request_sense.rs  sanitize.rs  security_protocol_in.rs  security_protocol_out.rs  send_diagnostic.rs  set_identifying_information.rs  set_timestamp.rs  start_stop_unit.rs  stream_control.rs  synchronize_cache.rs  test_unit_ready.rs  unmap.rs  verify.rs  write.rs  write_and_verify.rs  write_atomic.rs  (+4 more)
