[package]
name = "scsir"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple library for issuing SCSI commands"
documentation = "https://docs.rs/scsir"
repository = "https://github.com/maboroshinokiseki/scsir"
readme = "../README.md"
keywords = ["scsi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
modular-bitfield-msb = "0.11.2"
thiserror = "1.0.37"


[target.'cfg(unix)'.dependencies]
nix = "0.29.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Storage_FileSystem",
    "Win32_Storage_IscsiDisc",
] }
